# mssendmail

./: .gitignore  README.md  pyproject.toml  uv
mssendmail/: queue_worker.py  queue_writer.py
scripts/: mssendmail-worker.py  mssendmail.py
util/: mssendmail-queue-worker.service
